initial home page

--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -20,14 +20,20 @@ body {
     margin: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: caveat;
     margin: 0 0 0.6em;
     line-height: 1;
 }
 
-
-section, main, footer {
+section,
+main,
+footer {
     padding: 5px;
 }
 
@@ -41,8 +47,8 @@ p {
 
 a {
     text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
 
+    &:hover {
+        text-decoration: underline;
+    }
+}
