--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,10 +1,15 @@
 // Colors
+$clrGray1: #f3efef;
+$clrGray2: #62646a;
+$clrGray3: #222325;
+
+$bgColor: #0a4226;
 $clr1: #2e3bce;
 $clr2: #6d08da;
 $clr3: #574f7d;
 $clr4: #f2a1e0;
 $clr5: #f26e93;
-$clr6: #fff;
+$clr6: #af8484;
 $clr7: #222;
 
 
