design of GigDetails changed

--- a/Frontend/src/assets/styles/views/GigDetails.scss
+++ b/Frontend/src/assets/styles/views/GigDetails.scss
@@ -1,6 +1,7 @@
 .gig-details{
     display: grid;
     grid-template-columns: 24px 1fr 24px;
+    height:1000px;
     color: black;
     .gig{
         display: flex;
