--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -12,8 +12,10 @@
 @import "basics/links";
 
 // Components
+@import "cmps/AboutSeller";
 @import "cmps/AppFooter";
 @import "cmps/AppHeader";
+@import "cmps/GigHeader";
 @import "cmps/GigInfo";
 @import "cmps/GigOrder";
 @import "cmps/ShoppingCart";
