--- a/Frontend/src/assets/styles/cmps/GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/GigOrder.scss
@@ -4,7 +4,7 @@
     width:45%;
     height: 520px;
     padding: 24px;
-    border: 1px solid black;
+    border: 1px solid #dadbdd;
     .title{
         display: flex;
         justify-content: space-between;
@@ -33,9 +33,12 @@
         display: flex;
         justify-content: center;
         button{
+            width: 100%;
+            height: 40px;
             background-color: #19a463;
             color: white;
             border: 1px solid #19a463;
+            border-radius: 3px;
         }
     }
 }
