svgs added, appropriate fiverr header

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,9 +1,12 @@
 // Colors
+$clrGray0: white;
 $clrGray1: #f3efef;
-$clrGray2: #62646a;
+$clrGray2: #e4e5e7;
 $clrGray3: #222325;
+$clrGray4: rgb(87, 83, 83);
 
-$bgColor: #0a4226;
+$bgColor1: #0a4226;
+$bgColor2: #2dd12d;
 $clr1: #2e3bce;
 $clr2: #6d08da;
 $clr3: #574f7d;
