--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -16,7 +16,8 @@ html {
 body {
     font-size: rem(18px);
     margin: 0;
-    max-width: 1024px;
+    width: 100%;
+    height: 100%;
     margin: auto;
 }
 
