--- a/Frontend/src/assets/styles/cmps/AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/AppHeader.scss
@@ -1,53 +1,156 @@
 .app-header {
-    background-color: $clr4;
-    padding: 10px;
+    background: $clrGray0;
+    color: $clrGray3;
+    font-family: Arial, Helvetica, sans-serif;
 
+    .container {
+        max-width: 1400px;
+        margin: auto;
+        justify-content: space-between;
+    }
 
-    .user-info {
-        // background-color: $clr2;
-        // padding: 2px 8px;
-        padding-left: 100px;
-        color: $clr1;
+    h1 {
+        margin: 0;
+        font-family: inherit;
+        color: $clrGray4;
+        font-size: 40px;
 
-        .score {
-            background-color: $clr2;
-            color: $clr6;
-            padding: 8px;
-            margin: 10px;
-            border-radius: 50%;
-        }
-
-        img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
+        span {
+            color: $bgColor2;
         }
     }
 
-    .user-info .btn-link {
-        color: $clr2;
+    a {
+        &:hover {
+            text-decoration: none;
+        }
     }
 
-    nav {
-        font-size: .8em;
-        background-color: $clr5;
-        padding: 5px;
+    .main-nav {
+        padding: 1em;
+        border-bottom: 1px solid $clrGray2;
 
+        a:first-child {
+            align-self: center;
+        }
+
+        .search-bar {
+            width: 35%;
+
+            input[type="text"] {
+                width: 90%;
+                padding: 1em;
+                border-radius: 5px 0px 0px 5px;
+                border: 1px solid $clrGray3;
+            }
+
+            button {
+                margin: 0;
+                padding: 1em 1.5em;
+                border-radius: 0px 5px 5px 0px;
+                border: 1px solid $clrGray3;
+                border-left: none;
+                background: $clrGray3;
+
+                &:hover{
+                    opacity: 0.8;
+                }
+            }
+        }
+
+        .nav-links {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            gap: 2em;
+            align-items: center;
+            font-weight: bold;
+
+            a {
+                color: $clrGray4;
+                transition: color 0.3s, background-color 0.3s, border 0.3s;
+
+                &:hover {
+                    color: $bgColor2;
+                }
+            }
+
+            li:last-child a {
+                padding: 5px 10px;
+                background-color: $clrGray0;
+                color: $bgColor2;
+                border: 1px solid $bgColor2;
+                border-radius: 5px;
+                transition: color 0.3s, background-color 0.3s, border 0.3s;
+
+                &:hover {
+                    background-color: $bgColor2;
+                    color: $clrGray0;
+                }
+            }
+
+            .user-info {
+                display: flex;
+                align-items: center;
+
+                img {
+                    margin-right: 8px;
+                }
+            }
+        }
     }
 
-    nav a:first-child {
-        margin-right: 30px;
-    }
+    .category-nav {
+        position: relative;
+        overflow: hidden;
+        color: $clrGray4;
+        border-bottom: 2px solid $clrGray2;
+        padding: 0.3em 1em;
 
-    nav a:not(:first-child) {
-        border-top: 1px solid $clr1;
-        padding: 0 5px;
-        margin: 10px;
-    }
+        .container {
+            display: flex;
+            overflow-x: scroll;
+            scrollbar-width: none;
 
-    nav .active {
-        color: $clr1;
-    }
+            &::-webkit-scrollbar {
+                display: none;
+            }
 
+            a {
+                flex: 0 0 auto;
+                color: inherit;
+                text-decoration: none;
+
+                &:not(:first-child) {
+                    margin-left: 1em;
+                }
+
+                &:hover {
+                    border-bottom: 3px solid green;
+                }
+            }
+        }
+
+        .carousel-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            z-index: 1;
+
+            &.left-side {
+                left: 10px;
+            }
+
+            &.right-side {
+                right: 10px;
+            }
+        }
+
+        @media (min-width: 1250px) {
+            .carousel-btn {
+                display: none;
+            }
+        }
+    }
 }
