home page includes changing images, companies section

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,9 +1,10 @@
 // Colors
 $clrGray0: white;
-$clrGray1: #f3efef;
-$clrGray2: #e4e5e7;
+$clrGray1: #f5f5f5;
+$clrGray2: #ced1d6;
 $clrGray3: #222325;
-$clrGray4: rgb(87, 83, 83);
+$clrGray4: #575353;
+$clrGray5: #b5b6ba;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
