--- a/Frontend/src/assets/styles/views/HomePage.scss
+++ b/Frontend/src/assets/styles/views/HomePage.scss
@@ -1,3 +1,46 @@
-.homepage {
-    
+.home-wrapper {
+    .welcome-section {
+        position: relative;
+        height: 450px;
+
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 1s;
+
+            &.active {
+                opacity: 1;
+            }
+        }
+    }
+
+    .home-companies-section {
+        background: $clrGray1;
+        padding: 1em;
+        position: relative;
+
+        .companies {
+            justify-content: center;
+            max-width: 1400px;
+            margin: 0 auto;
+            gap: 4em;
+            align-items: center;
+
+            h4 {
+                margin: 0;
+                color: $clrGray5;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            img {
+                width: auto;
+                height: 50px;
+            }
+        }
+    }
 }
