--- a/Frontend/src/assets/styles/cmps/AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/AppHeader.scss
@@ -52,7 +52,7 @@
                 border-left: none;
                 background: $clrGray3;
 
-                &:hover{
+                &:hover {
                     opacity: 0.8;
                 }
             }
@@ -65,9 +65,10 @@
             gap: 2em;
             align-items: center;
             font-weight: bold;
+            font-size: 16px;
 
             a {
-                color: $clrGray4;
+                color: $clrGray6;
                 transition: color 0.3s, background-color 0.3s, border 0.3s;
 
                 &:hover {
@@ -76,7 +77,7 @@
             }
 
             li:last-child a {
-                padding: 5px 10px;
+                padding: 10px 16px;
                 background-color: $clrGray0;
                 color: $bgColor2;
                 border: 1px solid $bgColor2;
@@ -105,7 +106,7 @@
         overflow: hidden;
         color: $clrGray4;
         border-bottom: 2px solid $clrGray2;
-        padding: 0.3em 1em;
+        padding: 0em 1em;
 
         .container {
             display: flex;
@@ -119,14 +120,30 @@
             a {
                 flex: 0 0 auto;
                 color: inherit;
-                text-decoration: none;
+                line-height: 24px;
+                padding: 8px 0px;
+                position: relative;
 
                 &:not(:first-child) {
                     margin-left: 1em;
                 }
 
-                &:hover {
-                    border-bottom: 3px solid green;
+                &::after {
+                    content: '';
+                    width: 100%;
+                    height: 3px;
+                    background: $bgColor2;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    transform: scaleX(0);
+                    transition: transform 0.3s ease-in-out;
+                    transform-origin: bottom right;
+                }
+
+                &:hover::after {
+                    transform: scaleX(1);
+                    transform-origin: bottom left;
                 }
             }
         }
