--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -5,9 +5,11 @@ $clrGray2: #ced1d6;
 $clrGray3: #222325;
 $clrGray4: #575353;
 $clrGray5: #b5b6ba;
+$clrGray6: #62646a;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
+
 $clr1: #2e3bce;
 $clr2: #6d08da;
 $clr3: #574f7d;
