--- a/Frontend/src/assets/styles/setup/_typography.scss
+++ b/Frontend/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,12 @@
 @font-face {
-    // font-family: caveat;
-    // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
+    font-family: macan-regular;
+    src: url(../../fonts/macan-regular.woff2);
 }
 @font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+    font-family: macan-light;
+    src: url(../../fonts/macan-light.ttf);
+}
+@font-face {
+    font-family: macan-bold;
+    src: url(../../fonts/macan-bold.ttf);
 }
