all gig info will load in GigDetails

--- a/Frontend/src/assets/styles/cmps/AboutSeller.scss
+++ b/Frontend/src/assets/styles/cmps/AboutSeller.scss
@@ -4,8 +4,9 @@
         img{
             width: 13px;
         }
-        .catto{
+        .seller-picture{
             width: 130px;
+            height: 130px;
             margin-inline-end: 10px;
         }
         button{
