--- a/Frontend/src/assets/styles/cmps/GigHeader.scss
+++ b/Frontend/src/assets/styles/cmps/GigHeader.scss
@@ -10,8 +10,9 @@
         img{
             width:13px;
         }
-        .catto{
-            width: 30px;
+        .seller-picture{
+            width: 110px;
+            height: 110px;
         }
     }
     img{
