--- a/Frontend/src/assets/styles/views/HomePage.scss
+++ b/Frontend/src/assets/styles/views/HomePage.scss
@@ -43,4 +43,72 @@
             }
         }
     }
+
+    .home-services-section {
+        position: relative;
+        overflow: hidden;
+        padding: 1em;
+
+        h2 {
+            font-size: 32px;
+            line-height: 120%;
+            color: $clrGray4;
+            font-family: Arial, Helvetica, sans-serif;
+            margin-bottom: 20px;
+        }
+
+        .services {
+            overflow-x: scroll;
+            display: flex;
+            scrollbar-width: none;
+            gap: 1em;
+
+            .service {
+                position: relative;
+                flex: 0 0 auto;
+                width: 305px;
+                height: 345px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                .service-text {
+                    position: absolute;
+                    bottom: 20%; // Adjust position to properly fit the text
+                    left: 10px;
+                    color: white;
+                    font-size: 20px; // Combined text size
+                    padding: 5px 10px; // Padding around the text
+                    border-radius: 5px; // For rounded corners
+                    text-align: center; // Center-align text
+                }
+            }
+        }
+
+        .carousel-btn {
+            position: absolute;
+            top: 50%;
+            background: $clrGray0;
+            border-radius: 50%;
+            width: 48px;
+            height: 48px;
+
+            img {
+                width: 50%;
+                height: 50%;
+            }
+
+            &.left-side {
+                left: -10px;
+            }
+
+            &.right-side {
+                right: -10px;
+            }
+        }
+    }
+
+
 }
