carousel unmounting fixed

--- a/Frontend/src/assets/styles/views/HomePage.scss
+++ b/Frontend/src/assets/styles/views/HomePage.scss
@@ -76,13 +76,13 @@
 
                 .service-text {
                     position: absolute;
-                    bottom: 20%; // Adjust position to properly fit the text
+                    bottom: 20%;
                     left: 10px;
                     color: white;
-                    font-size: 20px; // Combined text size
-                    padding: 5px 10px; // Padding around the text
-                    border-radius: 5px; // For rounded corners
-                    text-align: center; // Center-align text
+                    font-size: 20px;
+                    padding: 5px 10px;
+                    border-radius: 5px;
+                    text-align: center;
                 }
             }
         }
