--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -47,3 +47,9 @@ a {
         text-decoration: underline;
     }
 }
+
+ul, ol {
+    margin: 0; 
+    padding: 0; 
+    list-style-type: none; 
+  }
