--- a/Frontend/src/assets/styles/cmps/GigList.scss
+++ b/Frontend/src/assets/styles/cmps/GigList.scss
@@ -1,4 +1,6 @@
-.gig-list-container {
+.gig-list {
+
+    background-color: gray;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 24px;
