--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,7 @@ $clrGray3: #222325;
 $clrGray4: #575353;
 $clrGray5: #b5b6ba;
 $clrGray6: #62646a;
+$clrGray7: #404145;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
