--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -2,9 +2,15 @@
     background: $clrGray0;
     color: $clrGray3;
     font-family: Arial, Helvetica, sans-serif;
-    position: fixed;
+    position: relative;
     z-index: 10;
     width: 100%;
+
+    .app-header.home-page {
+        position: fixed;
+        top: 0;
+        z-index: 10;
+    }
 
     .container {
         max-width: 1400px;
