header position fix

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -6,7 +6,7 @@
     z-index: 10;
     width: 100%;
 
-    .app-header.home-page {
+    &.home-page {
         position: fixed;
         top: 0;
         z-index: 10;
