--- a/Frontend/src/assets/styles/cmps/GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/GigOrder.scss
@@ -5,6 +5,7 @@
     height: 520px;
     padding: 24px;
     border: 1px solid #dadbdd;
+    background-color: white;
     .title{
         display: flex;
         justify-content: space-between;
