--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -2,6 +2,7 @@
     .welcome-section {
         position: relative;
         height: 450px;
+        background: $bgColor1;
 
         img {
             position: absolute;
