--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -8,13 +8,12 @@
 }
 
 html {
-    font-family: montserrat;
+    font-family: macan-regular;
     line-height: 1.6;
-    color: $clr2;
 }
 
 body {
-    font-size: rem(18px);
+    font-size: rem(16px);
     margin: 0;
     width: 100%;
     height: 100%;
