--- a/Frontend/src/assets/styles/basics/_layout.scss
+++ b/Frontend/src/assets/styles/basics/_layout.scss
@@ -30,9 +30,21 @@
     }
 }
 
+.layout-row {
+    display: flex;
+    flex-flow: row wrap;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1400px;
+    padding: 0 10px;
+}
+
+
 .card-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px;
 }
+
+
 
