--- a/Frontend/src/assets/styles/cmps/UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/UserGigs.scss
@@ -1,4 +1,4 @@
-.user-gigs{
+.user-gigs {
     display: flex;
     flex-direction: column;
     margin-block-start: 40px;
@@ -6,32 +6,43 @@
     margin-inline-start: 20px;
     color: black;
     width: 100%;
-    .info-block{
+    gap: 1em;
+
+    .info-block {
         border: 1px solid #dadbdd;
         background-color: white;
-        &.title{
+
+        &.title {
             display: flex;
             align-items: center;
             height: 60px;
             padding: 23px;
             margin-block-end: 40px;
         }
-        &.gig{
+
+        &.gig {
             display: flex;
             justify-content: center;
             align-items: center;
             width: 250px;
             height: 250px;
-            .gig-creation-btn{
+            margin-top: -2.5em;
+
+            .gig-creation-btn {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 color: black;
-                button{
+
+                &:hover {
+                    text-decoration: none;
+                }
+
+                button {
                     height: 65px;
                     width: 65px;
                     border-radius: 50%;
-                    font-size:36px;
+                    font-size: 36px;
                     padding: 0;
                     background-color: #78cdd2;
                 }
