--- a/Frontend/src/assets/styles/cmps/GigList.scss
+++ b/Frontend/src/assets/styles/cmps/GigList.scss
@@ -2,7 +2,9 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 24px;
-
+  
+//   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+ 
   @media screen and (min-width: 600px) {
     grid-template-columns: repeat(2, 1fr);
   }
