--- a/Frontend/src/assets/styles/cmps/GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/GigOrder.scss
@@ -34,12 +34,19 @@
         display: flex;
         justify-content: center;
         button{
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: 40px;
             background-color: #19a463;
-            color: white;
+            color: #ffffff;
             border: 1px solid #19a463;
             border-radius: 3px;
+            img{
+                position: relative;
+                left: 30%;
+            }
         }
     }
 }
