--- a/Frontend/src/assets/styles/cmps/_ShoppingCart.scss
+++ b/Frontend/src/assets/styles/cmps/_ShoppingCart.scss
@@ -1,6 +1,6 @@
 .cart {
-    color: black;
-    background-color: $clr5;
+    color: $clrPrimary2;
+    // background-color: $clr5;
     padding: 20px;
     position: absolute;
     top: 10px;
