--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,24 +1,23 @@
 // Colors
-$clrGray0: white;
-$clrGray1: #f5f5f5;
-$clrGray2: #ced1d6;
-$clrGray3: #222325;
-$clrGray4: #575353;
-$clrGray5: #b5b6ba;
-$clrGray6: #62646a;
-$clrGray7: #404145;
+$clrPrimary1: white;
+$clrPrimary2: #222325;
+
+$clrSecondary1: #f5f5f5;
+$clrSecondary2: #dadbdd;
+$clrSecondary3: #ced1d6;
+$clrSecondary4: #b5b6ba;
+$clrSecondary5: #74767e;
+$clrSecondary6: #62646a;
+$clrSecondary7: #575353;
+$clrSecondary8: #404145;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
 
-$clr1: #2e3bce;
-$clr2: #6d08da;
-$clr3: #574f7d;
-$clr4: #f2a1e0;
-$clr5: #f26e93;
-$clr6: #af8484;
-$clr7: #222;
-
+$clr1: #19a463;
+$clr2: #78cdd2;
+$clr3: #29bd49;
+$clr4: #d83b3b;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
