--- a/Frontend/src/assets/styles/cmps/_AboutSeller.scss
+++ b/Frontend/src/assets/styles/cmps/_AboutSeller.scss
@@ -14,24 +14,24 @@
             padding: 0;
             height: 40px;
             width: 130px;
-            color: #74767e;
-            background-color: white;
-            border: 1px solid #74767e;
+            color: $clrSecondary5;
+            background-color: $clrPrimary1;
+            border: 1px solid $clrSecondary5;
             border-radius: 4px;
             &:hover{
-                color: white;
-                background-color: #74767e;
+                color: $clrPrimary1;
+                background-color: $clrSecondary5;
             }
         }
     }
     .seller-info{
-        border: 1px solid #dadbdd;
-        color: #74767e;
+        border: 1px solid $clrSecondary2;
+        color: $clrSecondary5;
         padding: 24px;
         .seller-details{
             display: flex;
             justify-content: space-between;
-            border-bottom: 1px solid #dadbdd;
+            border-bottom: 1px solid $clrSecondary2;
             padding-block-end: 16px;
             .inner-details{
                 width: 50%;
