--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -1,6 +1,6 @@
 .app-header {
-    background: $clrGray0;
-    color: $clrGray3;
+    background: $clrPrimary1;
+    color: $clrPrimary2;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     z-index: 10;
@@ -21,7 +21,7 @@
     h1 {
         margin: 0;
         font-family: inherit;
-        color: $clrGray4;
+        color: $clrSecondary7;
         font-size: 40px;
 
         span {
@@ -37,7 +37,7 @@
 
     .main-nav {
         padding: 1em;
-        border-bottom: 1px solid $clrGray2;
+        border-bottom: 1px solid $clrSecondary3;
 
         a:first-child {
             align-self: center;
@@ -50,16 +50,16 @@
                 width: 90%;
                 padding: 1em;
                 border-radius: 5px 0px 0px 5px;
-                border: 1px solid $clrGray3;
+                border: 1px solid $clrPrimary2;
             }
 
             button {
                 margin: 0;
                 padding: 1em 1.5em;
                 border-radius: 0px 5px 5px 0px;
-                border: 1px solid $clrGray3;
+                border: 1px solid $clrPrimary2;
                 border-left: none;
-                background: $clrGray3;
+                background: $clrPrimary2;
 
                 &:hover {
                     opacity: 0.8;
@@ -77,7 +77,7 @@
             font-size: 16px;
 
             a {
-                color: $clrGray6;
+                color: $clrSecondary6;
                 transition: color 0.3s, background-color 0.3s, border 0.3s;
 
                 &:hover {
@@ -95,7 +95,7 @@
 
                 &:hover {
                     background-color: $bgColor2;
-                    color: $clrGray0;
+                    color: $clrPrimary1;
                 }
             }
 
@@ -113,8 +113,8 @@
     .category-nav {
         position: relative;
         overflow: hidden;
-        color: $clrGray4;
-        border-bottom: 2px solid $clrGray2;
+        color: $clrSecondary7;
+        border-bottom: 2px solid $clrSecondary3;
         padding: 0em 1em;
 
         .container {
@@ -158,16 +158,16 @@
             cursor: pointer;
             z-index: 1;
             padding: 1em 0em;
-            background: $clrGray0;
+            background: $clrPrimary1;
 
             &.left-side {
                 left: 30px;
-                box-shadow: 0px 0px 20px 20px $clrGray0;
+                box-shadow: 0px 0px 20px 20px $clrPrimary1;
             }
 
             &.right-side {
                 right: 30px;
-                box-shadow: 0px 0px 20px 20px $clrGray0;
+                box-shadow: 0px 0px 20px 20px $clrPrimary1;
             }
         }
     }
