--- a/Frontend/src/assets/styles/cmps/_GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/_GigOrder.scss
@@ -4,8 +4,8 @@
     width:45%;
     height: 520px;
     padding: 24px;
-    border: 1px solid #dadbdd;
-    background-color: white;
+    border: 1px solid $clrSecondary2;
+    background-color: $clrPrimary1;
     .title{
         display: flex;
         justify-content: space-between;
@@ -39,9 +39,9 @@
             justify-content: center;
             width: 100%;
             height: 40px;
-            background-color: #19a463;
-            color: #ffffff;
-            border: 1px solid #19a463;
+            background-color: $clr1;
+            color: $clrPrimary1;
+            border: 1px solid $clr1;
             border-radius: 3px;
             img{
                 position: relative;
