--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -6,8 +6,8 @@
   img {
     width: 100%;
     height: 166.312px;
-    background-color: #fff;
-    border: 1px solid #e4e5e7;
+    background-color: $clrPrimary1;
+    border: 1px solid $clrSecondary2;
     border-radius: 0.5em;
     z-index: 0;
   }
@@ -45,6 +45,6 @@
     justify-content: space-between;
     height: 2.8125em;
     padding: 0.625em 0.75em;
-    border-top: 0.0625em solid #e4e5e7;
+    border-top: 0.0625em solid $clrSecondary2;
   }
 }
