--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -4,13 +4,13 @@
     margin-block-start: 40px;
     margin-block-end: 20px;
     margin-inline-start: 20px;
-    color: black;
+    color: $clrPrimary2;
     width: 100%;
     gap: 1em;
 
     .info-block {
-        border: 1px solid #dadbdd;
-        background-color: white;
+        border: 1px solid $clrSecondary2;
+        background-color: $clrPrimary1;
 
         &.title {
             display: flex;
@@ -32,7 +32,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                color: black;
+                color: $clrPrimary2;
 
                 &:hover {
                     text-decoration: none;
@@ -44,7 +44,7 @@
                     border-radius: 50%;
                     font-size: 36px;
                     padding: 0;
-                    background-color: #78cdd2;
+                    background-color: $clr2;
                 }
             }
         }
