--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -5,19 +5,19 @@
     position: fixed;
     top:0;
     right:0;
-    background-color: grey;
+    background-color: $clrSecondary5;
 }
 .user-msg button {
     float:right;
     border:0;
     border-radius: 50%;
     margin: 5px;
-    background-color: #222;
+    background-color: $clrPrimary2;
 }
 
 .user-msg.success {
-    background-color: rgb(41, 189, 73);
+    background-color: $clr3;
 }
 .user-msg.error {
-    background-color: rgb(216, 59, 59);
+    background-color: $clr4;
 }
