--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -20,7 +20,7 @@
     }
 
     .home-companies-section {
-        background: $clrGray1;
+        background: $clrSecondary1;
         padding: 1em;
         position: relative;
 
@@ -33,7 +33,7 @@
 
             h4 {
                 margin: 0;
-                color: $clrGray5;
+                color: $clrSecondary4;
                 font-weight: bold;
                 font-family: Arial, Helvetica, sans-serif;
             }
@@ -55,7 +55,7 @@
         h2 {
             font-size: 32px;
             line-height: 120%;
-            color: $clrGray4;
+            color: $clrSecondary7;
             font-family: Arial, Helvetica, sans-serif;
             margin-bottom: 20px;
             margin-left: 8px;
@@ -80,7 +80,7 @@
                     position: relative;
                     bottom: 100%;
                     left: 10px;
-                    color: $clrGray0;
+                    color: $clrPrimary1;
                     font-size: 24px;
                     padding: 0px 10px;
                     line-height: 30px;
@@ -96,7 +96,7 @@
         .carousel-btn {
             position: absolute;
             top: 50%;
-            background: $clrGray0;
+            background: $clrPrimary1;
             border-radius: 50%;
             width: 48px;
             height: 48px;
@@ -128,7 +128,7 @@
             padding-bottom: 24px;
             font-size: 32px;
             line-height: 120%;
-            color: $clrGray7;
+            color: $clrSecondary8;
             font-family: Arial, Helvetica, sans-serif;
         }
 
@@ -149,7 +149,7 @@
                 display: block;
                 width: 48px;
                 height: 2px;
-                background-color: $clrGray5;
+                background-color: $clrSecondary4;
                 position: absolute;
                 top: 50px;
                 left: 50%;
@@ -165,7 +165,7 @@
             p {
                 margin-top: 0.5em;
                 font-family: Arial, Helvetica, sans-serif;
-                color: $clrGray3;
+                color: $clrPrimary2;
             }
         }
     }
