finally fixed the bug with owner/user of gigs in gigpreview

--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -37,6 +37,13 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
+    .user-rating {
+      .rating-score{
+        img {
+          width: 13px;
+        }
+      }
+    }
   }
 
   .gig-price-likes {
