--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 // ::selection {
@@ -8,16 +8,16 @@
 // }
 
 html {
-    // font-family: macan-light;
-    line-height: 1.6;
+  // font-family: macan-light;
+  line-height: 1.6;
 }
 
 body {
-    font-size: rem(16px);
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    margin: auto;
+  font-size: rem(16px);
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 h1,
@@ -26,29 +26,34 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: caveat;
-    margin: 0 0 0.6em;
-    line-height: 1;
+  font-family: caveat;
+  margin: 0 0 0.6em;
+  line-height: 1;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 p {
-    margin: 0 0 1em;
+  margin: 0 0 1em;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 
-    &:hover {
-        text-decoration: underline;
-    }
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
-ul, ol {
-    margin: 0; 
-    padding: 0; 
-    list-style-type: none; 
-  }
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.icon {
+    width: 13px;
+}
