--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -47,7 +47,6 @@
 
     .home-services-section {
         position: relative;
-        padding: 1em 2em;
         overflow: hidden;
         max-width: 1400px;
         margin: auto;
@@ -100,7 +99,7 @@
             border-radius: 50%;
             width: 48px;
             height: 48px;
-            z-index: 1;
+            z-index: 100;
             box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .15);
 
             img {
@@ -109,11 +108,11 @@
             }
 
             &.left-side {
-                left: 5px;
+                left: 0%;
             }
 
             &.right-side {
-                right: 5px;
+                right: 0%;
             }
         }
     }
