--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -29,7 +29,7 @@
             border-radius: 50%;
             cursor: pointer;
             transition: background 0.3s;
-            padding: 10px;
+            padding: 0.5em;
 
             &:hover {
                 background: $clrSecondary3;
@@ -37,6 +37,7 @@
 
             .social-icon {
                 width: 20px;
+                height: 100%;
             }
         }
     }
