fonts fixed, and svg componant added, also service

--- a/Frontend/src/assets/styles/setup/_typography.scss
+++ b/Frontend/src/assets/styles/setup/_typography.scss
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: macan-regular;
-    src: url("../../fonts/macan-regular.woff2");
+    font-family: 'macan-regular';
+    src: url("@/assets/fonts/macan-regular.woff2");
 }
 @font-face {
-    font-family: macan-light;
-    src: url("../../fonts/macan-light.ttf");
+    font-family: 'macan-light';
+    src: url("@/assets/fonts/macan-light.ttf");
 }
 @font-face {
-    font-family: macan-bold;
-    src: url("../../fonts/macan-bold.ttf");
+    font-family: 'macan-bold';
+    src: url("@/assets/fonts/macan-bold.ttf");
 }
