--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -1,35 +1,57 @@
 .home-wrapper {
     .welcome-section {
-        position: relative;
         height: 760px;
         background: $bgColor1;
         color: $clrPrimary1;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: relative;
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            opacity: 0;
+            transition: opacity 1s;
+            z-index: 0;
+
+            &.active {
+                opacity: 1;
+            }
+        }
+
+        .small-img {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 150px;
+            height: auto;
+            z-index: 2;
+            opacity: 0;
+            transition: opacity 1s;
+
+            &.active {
+                opacity: 1;
+            }
+        }
 
         .welcome-text-search {
             width: 650px;
             height: fit-content;
             position: absolute;
-            z-index: 1;
+            z-index: 3;
             top: 50%;
             font-size: 40px;
             margin-left: 0.65em;
 
             h1 {
                 font-family: Arial, Helvetica, sans-serif;
-            }
-        }
-
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-            transition: opacity 1s;
-
-            &.active {
-                opacity: 1;
             }
         }
     }
