Fixed gigs in explose page and started on the gigfilter component. Also, created a carousel component to the GigPreview

--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -54,6 +54,15 @@ ol {
   list-style-type: none;
 }
 
-.icon {
-    width: 13px;
-}
+// .icon {
+//     width: 13px;
+// }
+
+
+.active {
+    display: block;
+  }
+  
+  .hidden {
+    display: none;
+  }
