--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import "cmps/UserInfo";
 @import "cmps/UserGigs.scss";
 
+@import "cmps/ImageCarousel";
 @import "cmps/ShoppingCart";
 @import "cmps/UserMsg";
 
