--- a/Frontend/src/assets/styles/cmps/_GigList.scss
+++ b/Frontend/src/assets/styles/cmps/_GigList.scss
@@ -1,16 +1,25 @@
 .gig-list {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap: 24px;
-  
-//   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
- 
+  grid-template-columns: minmax(0, 1fr);
+  width: 100%;
+  @media screen and (max-width: 600px) {
+    grid-gap: rem(12px);
+  }
   @media screen and (min-width: 600px) {
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: rem(16px);
   }
 
   @media screen and (min-width: 900px) {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media screen and (min-width: 1160px) {
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 32px;
   }
+
+ 
 }
