--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -1,14 +1,21 @@
 .gig-preview {
-  min-width: 150px;
-  max-width: 17.325em;
-  max-height: 23.125em;
+  // min-width: 150px;
+  // max-width: 17.325em;
+  // max-height: 23.125em;
+  display: grid;
+  grid-template-rows: minmax(0, 1fr) auto;
+  background-color: #fff;
+  border: 1px solid #e4e5e7;
+  border-radius: 0.5em;
 
   img {
     width: 100%;
-    height: 166.312px;
+    height: 166px;
+    // height: auto;
     background-color: $clrPrimary1;
     border: 1px solid $clrSecondary2;
-    border-radius: 0.5em;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
     z-index: 0;
   }
 
@@ -38,7 +45,7 @@
       text-overflow: ellipsis;
     }
     .user-rating {
-      .rating-score{
+      .rating-score {
         img {
           width: 13px;
         }
