--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 // Components
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
+@import "cmps/WelcomeSection";
 
 @import "cmps/GigHeader";
 @import "cmps/AboutSeller";
