--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -8,7 +8,7 @@
 // }
 
 html {
-  font-family: macan-light;
+  font-family: macan-regular;
   line-height: 1.6;
 }
 
@@ -58,11 +58,14 @@ ol {
 //     width: 13px;
 // }
 
-
 .active {
-    display: block;
-  }
-  
-  .hidden {
-    display: none;
-  }
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+.b {
+  font-family: macan-bold;
+}
