--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -52,7 +52,7 @@
   .user-rating {
     padding: 0 0.5em;
     .rate {
-      padding: 0 0.25em 0 0;
+      padding: 0 0.25em;
     }
     .rate-count {
       color: $clrSecondary5;
