added mini info on each hero in welcome section

--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -3,6 +3,7 @@
         background: $clrSecondary1;
         padding: 1em;
         position: relative;
+        margin-bottom: 4em;
 
         .companies {
             justify-content: center;
@@ -20,7 +21,7 @@
 
             img {
                 width: auto;
-                height: 50px;
+                height: auto;
             }
         }
     }
