--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -1,40 +1,72 @@
 .home-wrapper {
     .welcome-section {
         height: 760px;
-        background: $bgColor1;
         color: $clrPrimary1;
         position: relative;
+        background-color: $bgColor1;
 
-        .background-image {
+        // &.person-1 {
+        //     background: url(../../../../img/jenny.webp) no-repeat center center;
+        // }
+
+        // &.person-2 {
+        //     background: url(../../../../img/colin.webp) no-repeat center center;
+        //     background-color: $bgColor1;
+        // }
+
+        // &.person-3 {
+        //     background: url(../../../../img/scarlett.webp) no-repeat center center;
+        //     background-color: $bgColor1;
+        // }
+
+        // &.person-4 {
+        //     background: url(../../../../img/jordan.webp) no-repeat center center;
+        //     background-color: $bgColor1;
+        // }
+
+        // &.person-5 {
+        //     background: url(../../../../img/christina.webp) no-repeat center center;
+        //     background-color: $bgColor1;
+        // }
+
+        background-size: cover;
+
+        .person-info {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            opacity: 0;
-            transition: opacity 1s;
-            z-index: 0;
-
-            &.active {
-                opacity: 1;
-            }
-        }
-
-        .small-img {
-            position: absolute;
-            right: 10px;
-            width: 40px;
-            height: auto;
-            z-index: 2;
-            transition: opacity 1s;
             bottom: 10px;
-            opacity: 0;
+            right: 10px;
+            display: flex;
+            align-items: center;
+            z-index: 3;
+            box-shadow: 0 20px 30px 0 rgba(0, 37, 19, .2);
+            background: #ffffff24;
+            border-radius: 100px;
+            width: fit-content;
+            padding: 0.5em 1em;
+            border: 1px solid #ffffff66;
+            
+            .small-img {
+                width: 20%;
+                transition: opacity 1s;
+            }
 
-            &.active {
-                opacity: 1;
+            .text-content {
+                width: 80%;
+                padding-left: 10px;
+
+                .title,
+                .subtitle {
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: bold;
+                }
+
+                .title {
+                    font-size: 12px;
+                }
+
+                .subtitle {
+                    font-size: 16px;
+                }
             }
         }
 
