--- a/Frontend/src/assets/styles/setup/_typography.scss
+++ b/Frontend/src/assets/styles/setup/_typography.scss
@@ -10,3 +10,7 @@
     font-family: 'macan-bold';
     src: url("@/assets/fonts/macan-bold.ttf");
 }
+@font-face {
+    font-family: 'domain-display-medium';
+    src: url("@assets/font/domain-display-medium-italic.otf");
+}
